--- a/index.html
+++ b/index.html
@@ -4,24 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>draft_randomizer</title>
-<style>
-  body {
-      margin: 0;
-      background-color: #222;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;  
-  }
-  img {
-    width:100%;
-    height: auto;
-  }
-  </style>
 </head>
 <body>
-<img id="randomImage" src="" alt="Random Image">
-  
+<div id="draft_randomizer"></div>
+
 <script>
 const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
@@ -30,52 +16,57 @@ const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
 ];
 
-const displayDuration = 400;
-
-let shuffledImages = [];
+let shuffledOrder = [];
 let currentIndex = 0;
-  
-function shuffle(array) {
-for (let i = arr.length - 1; i > 0; i--) { 
-  let j = Math.floor(Math.random() * (i + 1));
-  [array[i], array[j]] = [array[j], array[i]];
-  }
+
+function shuffleArray(array) {
+let shuffled = array.slice();
+for (let i = shuffled.length - 1; i > 0; i--) {
+let j = Math.floor(Math.random() * (i + 1));
+[shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
+}
+return shuffled;
 }
 
-  let currentIndex = 0;
-  function cycleImages () { 
-  if (currentIndex === 0) shuffled(images); 
-    document.getElementById('randomImage').src = images[currentIndex];
-    currentIndex = (currentIndex +1) % images.length;
+function shuffleLoop() {
+if (currentIndex === 0) {
+shuffledOrder = shuffleArray(images);
+}
 
-  }
-  
-    setInterval(cycleImages, 300);
-  
-  cycleImages();
+document.getElementById("randomizer").innerHTML = `<img src="${shuffledOrder[currentIndex]}" style="width:100%;height:auto;">`;
+currentIndex++;
+
+if (currentIndex >= shuffledOrder.length) {
+currentIndex = 0;
+}
+
+setTimeout(shuffleLoop, 1000);
+}
+
+shuffleLoop();
 </script>
 </body>
 </html>
