--- a/index.html
+++ b/index.html
@@ -3,26 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Random Image Shuffle</title>
+<title>draft randomizer</title>
 <style>
 body {
 margin: 0;
+padding: 0;
 display: flex;
+flex-wrap: wrap;
 justify-content: center;
-align-items: center;
+align-items: flex-start;
 height: 100vh;
+overflow: hidden;
 background-color: #000;
 }
 
-img {
-max-width: 100%;
-height: auto;
+.image-container {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 10px;
+transition: all 0.3s ease-in-out;
+}
+
+.image {
+width: 65%; /* Initial size */
+transition: all 0.3s ease-in-out;
 }
 </style>
 </head>
 <body>
-<img id="random-image" src="" alt="Random Image">
+
 <script>
+// Array of image URLs (Make sure these are correct and in raw format)
 const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
@@ -50,37 +63,53 @@ const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg", 
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg", 
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg", 
-// Add all image URLs here
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
 ];
 
+// Function to shuffle an array
 function shuffleArray(array) {
-let currentIndex = array.length, randomIndex, tempValue;
-
-while (currentIndex !== 0) {
-randomIndex = Math.floor(Math.random() * currentIndex);
-currentIndex--;
-
-tempValue = array[currentIndex];
-array[currentIndex] = array[randomIndex];
-array[randomIndex] = tempValue;
+for (let i = array.length - 1; i > 0; i--) {
+const j = Math.floor(Math.random() * (i + 1));
+[array[i], array[j]] = [array[j], array[i]];
 }
-
 return array;
 }
 
-function displayRandomImage() {
+// Function to create a new sequence
+function createSequence() {
 const shuffledImages = shuffleArray([...images]);
-let i = 0;
-const imgElement = document.getElementById('random-image');
 
-setInterval(() => {
-imgElement.src = shuffledImages[i];
-i = (i + 1) % shuffledImages.length;
-}, 100); // Change 100 to any number for speed of image change
+// Create a new container for this sequence
+const container = document.createElement('div');
+container.className = 'image-container';
+
+// Create the images for this sequence
+shuffledImages.forEach((imageUrl, index) => {
+const img = document.createElement('img');
+img.src = imageUrl;
+img.className = 'image';
+img.alt = 'Random Image';
+img.style.width = `${65 - (index * 5)}%`; // Shrink each subsequent image
+container.appendChild(img);
+});
+
+// Append the new sequence to the body
+document.body.appendChild(container);
 }
 
-displayRandomImage();
+// Create the first sequence
+createSequence();
+
+// Add a new sequence on key press (Enter key)
+window.addEventListener('keydown', function(event) {
+if (event.key === 'Enter') {
+createSequence();
+}
+});
+
+// Optionally, you could add an automatic reshuffle/reload every few seconds:
+// setInterval(createSequence, 10000); // Uncomment for automatic reshuffle every 10 seconds
 </script>
+
 </body>
 </html>
