--- a/index.html
+++ b/index.html
@@ -3,53 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>92 draft randomizer</title>
+<title>Image Randomizer</title>
 <style>
 body {
 margin: 0;
-padding: 0;
-display: flex;
-flex-wrap: wrap;
-justify-content: flex-start;
-align-items: flex-start;
-height: 100vh;
 overflow: hidden;
-background-color: black; /* No visible background */
-}
-
-.sequence {
 display: flex;
 flex-wrap: wrap;
-justify-content: flex-start;
+justify-content: center;
 align-items: flex-start;
+background-color: black;
+}
+.image-container {
+display: inline-block;
 margin: 0;
 position: relative;
-overflow: hidden;
-transition: all 0.5s ease;
-}
-
-.image-container {
 width: 100%;
 height: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-margin: 0;
-padding: 0;
+overflow: hidden;
 }
-
-.image {
-width: 65%; /* Initial image size */
-height: auto;
-object-fit: contain; /* Ensures images aren't cropped */
-transition: all 0.5s ease;
+.image-sequence {
+display: block;
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
-
 </style>
 </head>
 <body>
 <script>
-// Array of image URLs
+// Image URLs
 const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
@@ -57,90 +40,60 @@ const images = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg", 
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg", 
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
 ];
 
-// Shuffle the images randomly
+// Shuffle function to randomize images
 function shuffleArray(array) {
 for (let i = array.length - 1; i > 0; i--) {
 const j = Math.floor(Math.random() * (i + 1));
-[array[i], array[j]] = [array[j], array[i]]; // Swap elements
+[array[i], array[j]] = [array[j], array[i]];
 }
 }
 
-// Function to create a new sequence
-function createSequence() {
+// Function to create a new sequence of images
+function createImageSequence() {
 shuffleArray(images);
-const sequence = document.createElement("div");
-sequence.classList.add("sequence");
+const sequenceContainer = document.createElement("div");
+sequenceContainer.classList.add("image-container");
 
-images.forEach((imageUrl) => {
-const imageContainer = document.createElement("div");
-imageContainer.classList.add("image-container");
-
+images.forEach(image => {
 const img = document.createElement("img");
-img.src = imageUrl;
-img.classList.add("image");
-imageContainer.appendChild(img);
-
-sequence.appendChild(imageContainer);
+img.src = image;
+img.classList.add("image-sequence");
+sequenceContainer.appendChild(img);
 });
 
-document.body.appendChild(sequence);
-resizeSequences(); // Call the function to resize after new sequence is added
+document.body.appendChild(sequenceContainer);
 }
 
-// Function to resize and reposition sequences to fit the screen
-function resizeSequences() {
-const sequences = document.querySelectorAll(".sequence");
-const screenWidth = window.innerWidth;
-const screenHeight = window.innerHeight;
-
-// Calculate optimal size based on how many sequences are on screen
-const size = Math.min(screenWidth / Math.ceil(Math.sqrt(sequences.length)), screenHeight / Math.ceil(Math.sqrt(sequences.length)));
-
-sequences.forEach((sequence) => {
-sequence.style.width = `${size}px`;
-sequence.style.height = `${size}px`;
-sequence.querySelectorAll(".image").forEach((img) => {
-img.style.width = "100%";
-img.style.height = "auto";
-});
-});
-}
-
-// Create the first sequence when the page loads
-createSequence();
-
-// Add new sequence when "Enter" is pressed
-window.addEventListener("keydown", (e) => {
-if (e.key === "Enter") {
-createSequence();
+// Trigger new sequence when "Enter" is pressed
+window.addEventListener("keydown", function (event) {
+if (event.key === "Enter") {
+createImageSequence();
 }
 });
 
-// Resize the sequences whenever the window is resized
-window.addEventListener("resize", resizeSequences);
 </script>
 </body>
 </html>
