--- a/index.html
+++ b/index.html
@@ -8,87 +8,72 @@
 body {
 margin: 0;
 overflow: hidden;
+background-color: black;
 display: flex;
 flex-wrap: wrap;
-justify-content: center;
-align-items: flex-start;
-background-color: black;
+justify-content: space-between;
 }
+
 .image-container {
 display: inline-block;
 margin: 0;
 position: relative;
-width: 100%;
-height: 100%;
+width: 33.33%; /* Divide the screen into 3 columns */
+height: 33.33vh; /* 1/3 of viewport height */
+box-sizing: border-box;
 overflow: hidden;
 }
+
 .image-sequence {
+width: 100%; /* Fill container width */
+height: 100%; /* Fill container height */
+object-fit: contain; /* Ensure full image is visible, scaled to fit */
 display: block;
-width: 100%;
-height: 100%;
-object-fit: cover;
 }
+
 </style>
 </head>
 <body>
 <script>
-// Image URLs
-const images = [
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
-];
+// Array of image URLs
+let sequenceContainer = document.body;
 
-// Shuffle function to randomize images
-function shuffleArray(array) {
-for (let i = array.length - 1; i > 0; i--) {
+// Shuffle function for randomizing image order
+function shuffleArray(arr) {
+for (let i = arr.length - 1; i > 0; i--) {
 const j = Math.floor(Math.random() * (i + 1));
-[array[i], array[j]] = [array[j], array[i]];
+[arr[i], arr[j]] = [arr[j], arr[i]];
 }
 }
 
-// Function to create a new sequence of images
+// Create and add a new image sequence
 function createImageSequence() {
+// Shuffle the images for randomness
 shuffleArray(images);
-const sequenceContainer = document.createElement("div");
-sequenceContainer.classList.add("image-container");
 
-images.forEach(image => {
-const img = document.createElement("img");
-img.src = image;
-img.classList.add("image-sequence");
-sequenceContainer.appendChild(img);
-});
+// Create a new container for the sequence of images
+let newContainer = document.createElement('div');
+newContainer.classList.add('image-container');
 
-document.body.appendChild(sequenceContainer);
+// Create image elements for the sequence
+for (let i = 0; i < images.length; i++) {
+let img = document.createElement('img');
+img.src = images[i];
+img.classList.add('image-sequence');
+newContainer.appendChild(img);
 }
 
-// Trigger new sequence when "Enter" is pressed
-window.addEventListener("keydown", function (event) {
+// Add the new sequence to the page
+sequenceContainer.appendChild(newContainer);
+}
+
+// Initial sequence setup
+createImageSequence();
+
+// Listen for Enter key to add new sequence
+document.addEventListener('keydown', function(event) {
+
+
 if (event.key === "Enter") {
 createImageSequence();
 }
